--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server", 
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "author": "",
   "license": "ISC",
