--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^18.3.0",
     "browserify": "^16.5.1",
+    "express": "^4.17.1",
     "font-loader": "^0.1.2",
     "three": "^0.115.0",
     "watchify": "^3.11.1"
@@ -32,8 +33,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "dev": "webpack-dev-server", 
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
