--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
