--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^4.2.2",
     "mtl-loader": "^0.2.0",
     "style-loader": "^1.2.0",
     "url-loader": "^4.1.0",
